[tool.poetry]
name = "mongodb-vector-playground"
version = "0.1.0"
description = ""
authors = ["vikyw89 <vikyw89@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.6.1"
python-dotenv = "^1.0.0"
fastapi = "^0.105.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
motor = "^3.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
